--- a/report.html
+++ b/report.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Report</title>
+  </head>
+  <body>
+    <main>
+        <h1>261 Project Report</h1>
+        <ol>
+            <li>1. this is the url to our github repo which is shared with each other and the prof: https://github.com/343-F24-Shrestha/343f24final-ltrfantasy</li>
+            <li>2. ...</li>
+        </ol>
+    </main>
+  </body>
+</html>
 
