--- a/report.html
+++ b/report.html
@@ -10,8 +10,8 @@
     <main>
         <h1>343 Project Report</h1>
         <ol>
-            <li>1. this is the url to our github repo which is shared with each other and the prof: https://github.com/343-F24-Shrestha/343f24final-ltrfantasy</li>
-            <li>2. ...</li>
+            <li>this is the url to our github repo which is shared with each other and the prof: https://github.com/343-F24-Shrestha/343f24final-ltrfantasy</li>
+            <li>...</li>
         </ol>
     </main>
   </body>
