--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="homepage.css">
-        <title>Homepage</title>
-    </head>
-    <body>
-        <h1>LTR FANTASY</h1>
-        <button type="button">Teams</button><button type="button">Players</button><button type="button">Lineups</button>
-        <h2>Top Teams:</h2>
-        <h2>Top Players:</h2>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="homepage.css">
+    <title>Homepage</title>
+</head>
+<body>
+    <h1>LTR FANTASY</h1>
+    <div class="menu">
+        <a href="index.html" class="current">Home</a>
+        <a href="players.html">Players</a>
+        <a href="lineups.html">Lineups</a>
+    </div>
+    <h2>Top Teams:</h2>
+    <h2>Top Players:</h2>
+</body>
 </html>
