--- a/lineups.html
+++ b/lineups.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Teams</title>
-    <!--<link rel="stylesheet" href="./style.css">-->
-    <!--<link rel="icon" href="./favicon.ico" type="image/x-icon">-->
-  </head>
-  <body>
+    <title>Lineups</title>
+    <link rel="stylesheet" href="homepage.css">
+</head>
+<body>
+    <h1>LTR FANTASY</h1>
+    <div class="menu">
+        <a href="index.html">Home</a>
+        <a href="teams.html">Teams</a>
+        <a href="players.html">Players</a>
+    </div>
     <main>
         <h1>Lineups</h1>
     </main>
-    <!--<script src="index.js"></script>-->
-  </body>
+</body>
 </html>
