--- a/playerCard.html
+++ b/playerCard.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Teams</title>
-    <!--<link rel="stylesheet" href="./style.css">-->
-    <!--<link rel="icon" href="./favicon.ico" type="image/x-icon">-->
-  </head>
-  <body>
-    <main>
-        <h1>*Player*</h1>
-    </main>
-    <!--<script src="index.js"></script>-->
-  </body>
+    <title>Team Details</title>
+    <link rel="stylesheet" href="homepage.css">
+</head>
+<body>
+  <h1>LTR FANTASY</h1>
+  <div class="menu">
+      <a href="index.html">Home</a>
+      <a href="teams.html">Teams</a>
+      <a href="players.html" class="current">Players</a>
+      <a href="lineups.html">Lineups</a>
+  </div>
+  <main>
+      <h1>Player Details</h1>
+      <p>This is a template page for a player's detailed information. Future updates will display dynamic data for the selected player.</p>
+  </main>
+</body>
 </html>
