--- a/report.html
+++ b/report.html
@@ -11,7 +11,13 @@
         <h1>343 Project Report</h1>
         <ol>
             <li>this is the url to our github repo which is shared with each other and the prof: https://github.com/343-F24-Shrestha/343f24final-ltrfantasy</li>
-            <li>...</li>
+            <li>we have support for distinct layouts with comments in our code to show where it is</li>
+            <li>we have at least five separate pages that link together, with one page being named index.html</li>
+            <li>our site has multiple headers</li>
+            <li>our site has navigation links that link to other pages</li>
+            <li>our site have placeholder images of players and a logo all with alt attributes</li>
+            <li>all pages pass the validators</li>
+            <li>our site has both sans-serif and serif font</li>
         </ol>
     </main>
   </body>
