--- a/report.html
+++ b/report.html
@@ -11,6 +11,8 @@
         <h1>343 Project Report</h1>
         <ol>
             <li>this is the url to our github repo which is shared with each other and the prof: https://github.com/343-F24-Shrestha/343f24final-ltrfantasy</li>
+            <li>our site is published</li>
+            <li>our site has a page named report.html with an ordered list</li>
             <li>we have support for distinct layouts with comments in our code to show where it is</li>
             <li>we have at least five separate pages that link together, with one page being named index.html</li>
             <li>our site has multiple headers</li>
@@ -18,6 +20,9 @@
             <li>our site have placeholder images of players and a logo all with alt attributes</li>
             <li>all pages pass the validators</li>
             <li>our site has both sans-serif and serif font</li>
+            <li>our site does not yet have a form</li>
+            <li>our site links to the official NFL team websites</li>
+            <li>right now we are thinking that the two APIs we will use are https://www.api-football.com and https://site.api.espn.com/apis/site/v2/sports/football/nfl/scoreboard?dates=20221113</li>
         </ol>
     </main>
   </body>
