--- a/lineups.html
+++ b/lineups.html
@@ -13,9 +13,9 @@
         <a href="index.html">Home</a>
         <a href="teams.html">Teams</a>
         <a href="players.html">Players</a>
+        <a href="lineups.html" class="current">Lineups</a>
     </div>
     <main>
-        <h1>Lineups</h1>
     </main>
 </body>
 </html>
