--- a/playerCard.html
+++ b/playerCard.html
@@ -14,8 +14,10 @@
       <a href="lineups.html">Lineups</a>
   </div>
   <main>
-      <h1>Player Details</h1>
+    <div class="main-content">
+      <h2>Player Details</h2>
       <p>This is a template page for a player's detailed information. Future updates will display dynamic data for the selected player.</p>
+    </div>
   </main>
 </body>
 </html>
