--- a/players.html
+++ b/players.html
@@ -12,10 +12,10 @@
     <div class="menu">
         <a href="index.html">Home</a>
         <a href="teams.html">Teams</a>
+        <a href="players.html" class="current">Players</a>
         <a href="lineups.html">Lineups</a>
     </div>
     <main>
-        <h1>Players</h1>
     </main>
 </body>
 </html>
