--- a/teamCard.html
+++ b/teamCard.html
@@ -14,8 +14,10 @@
       <a href="lineups.html">Lineups</a>
   </div>
   <main>
-      <h1>Team Details</h1>
+    <div class="main-content">
+      <h2>Team Details</h2>
       <p>This is a template page for a team's detailed information. Future updates will display dynamic data for the selected team.</p>
+    </div>
   </main>
 </body>
 </html>
