Revamped all pages and stylesheets to look clean

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/homepage.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
-<body>
+<body data-page="dashboard">
     <header>
         <h1>LTR FANTASY</h1>
         <nav class="menu">
