--- a/lineups.html
+++ b/lineups.html
@@ -7,6 +7,7 @@
     <title>LTR Fantasy - Lineups</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/lineups.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body data-page="lineups">
     <header>
