--- a/lineups.html
+++ b/lineups.html
@@ -42,6 +42,6 @@
         <div class="loader"></div>
     </div>
 
-    <script type="module" src="scripts/pages/lineups.js"></script>
+    <script type="module" src="scripts/pages/main.js"></script>
 </body>
 </html>
