sorting for team ppg, division, over/under and ats

--- a/teams.html
+++ b/teams.html
@@ -42,8 +42,8 @@
                 <select id="sort-options" aria-label="Sort teams">
                     <option value="winPercentage">Sort by Win %</option>
                     <option value="pointsPerGame">Sort by Points/Game</option>
-                    <option value="pointsAllowed">Sort by Points Allowed</option>
                     <option value="atsRecord">Sort by ATS Record</option>
+                    <option value="overUnder">Sort by Over/Under</option>
                 </select>
             </div>
         </section>
